# ros_markers

./: CMakeLists.txt  README.md  package.xml
chilitags_catkin/: CMakeLists.txt  package.xml
config/: markers_configuration_sample.yml  markers_cowriter.yml
launch/: cowriter.launch  detect.launch  detect_gscam.launch
ros_markers/config/: markers_configuration_sample.yml
ros_markers/src/: nodelet.cpp
src/: chilitagsdetector.cpp  chilitagsdetector.hpp  detect.cpp  estimator.h  filter.cpp  filter.h  markers.yml  nodelet.cpp  objectconfig.cpp  objectconfig.h  yaml-test.cpp
